Fix svg rendering on mobile.

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -45,6 +45,7 @@
     bottom: 0;
     width: 100%;
     height: 10vw;
+    margin-bottom: -1px;
     /* set height to pixels if you want angle to change with screen width */
   }
 
@@ -59,7 +60,6 @@
     //background: $light-blue;
     color: #406098;
     font-family: sans-serif;
-    padding: 0px 20px 0px;
     text-align: left;
     text-shadow: 0px 0px 1px rgba(0,0,0,0.5);
 
